# ChangeLog for sys-fs/squashmount
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashmount-2.10 (09 Sep 2013)

  10 Sep 2013; Martin Väth <martin@mvath.de>:
  Install zsh-completion unconditionally according to gentoo policy

  09 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-2.9 (04 Sep 2013)

  05 Sep 2013; Martin Väth <martin@mvath.de>:
  Depend properly on virtual/perl-* to avoid possible issues with perl-5.18
  or newer versions.

  04 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fixes breakage with systemd
  (regression of squashmount-2.8)

*squashmount-2.8 (31 Aug 2013)

  31 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-2.6 (24 Aug 2013)

  24 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-2.5 (22 Aug 2013)

  22 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fixes severe umount bug.

*squashmount-2.3 (21 Aug 2013)

  21 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix restart bug. Many improvements.
  Recommend >=perl-5.14 (or Term-ANSIColor) for colored output

*squashmount-2.2 (20 Aug 2013)

  20 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Recommend dev-perl/File-Which

*squashmount-2.1 (19 Aug 2013)

  19 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-1.1 (18 Aug 2013)

  18 Aug 2013; Martin Väth <martin@mvath.de>:
  This is the successor of sys-fs/squash_dir