@@ -1,1 +1,1 @@
-DIST squashmount-2.10.tar.gz 32421 SHA256 bbb4350664353c79836011506ff0c3f939a27dfa0940f2c542611528ffcd3f9e SHA512 32abd4408f35933b5cebae400f611f303f0fb0bf3ba38d624ba3233594b5f983a19be5397879e39866f1ae3f55f59052fd5393f74a286c95882e2116ac3853b5 WHIRLPOOL 445213c5c52c5a56be9c34f7027d564f13020a2f109d20af8f09efd25408712c7d1e89730b2fe26177a23dc3fc37449ccb64bc1948ab57cf14cdb750d706dd96
+DIST squashmount-3.1.tar.gz 34596 SHA256 21788a8b075fc16fefe1dc84122e3566f3f2392abb8ef6ef5c9fd59c61d85fa5 SHA512 a7de10b011ebd6bb1bc5fef1fb02af7f4f74913d4719fea531fffe66e4f544867c22968fa255b60534b2b5194b578c9d348a095d09fe4c4920dc16751e1b681e WHIRLPOOL 3c41ccc6b73084ed452287ebe702c62c08c7a70d7a67390fac40b519de487741a283d24f76addd10af6de87227a2c6f987a2a25eee5e7b559f542d7c0d2e9fb2
