@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-3.1 (21 Sep 2013)
+
+  21 Sep 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Report new recommended dependencies.
+  This version will modprobe required modules and can be configured to skip
+  overlayfs or aufs depending on availability without a warning.
+
 *squashmount-2.10 (09 Sep 2013)
 
   10 Sep 2013; Martin Väth <martin@mvath.de>:
